force-app/main/default/objects/SVMXC__SPM_Scheduling_Technician_Utilization__c/SVMXC__SPM_Scheduling_Technician_Utilization__c.object-meta.xml
<CustomObject>
    <description>Holds the Technician Utilization computed from Scheduling Engine on a daily basis</description>
    <label>SPM Scheduling Technician Utilization</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM Scheduling Technician Utilization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>