force-app/main/default/objects/SVMXC__SPM_Scheduling_Technician_Utilization__c/fields/SVMXC__Overhead_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Overhead_Time__c</fullName>
    <description>Holds the overhead time taken before and after the work is performed</description>
    <inlineHelpText>Holds the overhead time taken before and after the work is performed</inlineHelpText>
    <label>Overhead Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>