force-app/main/default/objects/SVMXC__SPM_Scheduling_Technician_Utilization__c/fields/SVMXC__Productive_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Productive_Time__c</fullName>
    <description>Holds the sum of productive time.</description>
    <inlineHelpText>Holds the sum of productive time.</inlineHelpText>
    <label>Productive Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>