force-app/main/default/objects/SVMXC__SPM_Scheduling_Technician_Utilization__c/fields/SVMXC__Service_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Time__c</fullName>
    <description>Holds the sum of differences of event duration with drive time</description>
    <inlineHelpText>Holds the sum of differences of event duration with drive time</inlineHelpText>
    <label>Service Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>